--- a/cc-frontend/package.json
+++ b/cc-frontend/package.json
@@ -37,6 +37,7 @@
     "react-toastify": "^9.1.3",
     "react-webcam": "^7.0.1",
     "redux-devtools-extension": "^2.13.9",
+    "rsuite": "^5.43.0",
     "socket.io-client": "^4.7.2",
     "stripe": "^12.14.0",
     "sweetalert2": "^11.7.9",
