--- a/cc-frontend/package.json
+++ b/cc-frontend/package.json
@@ -16,6 +16,7 @@
     "i": "^0.3.7",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
     "moyasar": "^0.5.1",
     "netlify-cli": "^15.9.1",
     "npm": "^9.8.1",
@@ -27,6 +28,7 @@
     "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
+    "react-moment": "^1.1.3",
     "react-phone-number-input": "^3.2.23",
     "react-quill": "^2.0.0",
     "react-rich-text-editor": "^2.1.2",
