--- a/cc-frontend/package.json
+++ b/cc-frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "clipboard-copy": "^4.0.1",
     "country-state-city": "^3.1.4",
     "i": "^0.3.7",
     "install": "^0.13.0",
